// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCheckbox is rendered 1`] = `
<div
  class="euiCheckbox testClass1 testClass2 emotion-euiCheckbox-euiTestCss"
>
  <input
    aria-label="aria-label"
    class="euiCheckbox__input emotion-euiCheckbox__input"
    data-test-subj="test subject string"
    id="id"
    type="checkbox"
  />
</div>
`;

exports[`EuiCheckbox props check is rendered 1`] = `
<div
  class="euiCheckbox emotion-euiCheckbox"
>
  <input
    checked=""
    class="euiCheckbox__input emotion-euiCheckbox__input"
    id="id"
    type="checkbox"
  />
</div>
`;

exports[`EuiCheckbox props disabled disabled is rendered 1`] = `
<div
  class="euiCheckbox emotion-euiCheckbox"
>
  <input
    class="euiCheckbox__input emotion-euiCheckbox__input"
    disabled=""
    id="id"
    type="checkbox"
  />
</div>
`;

exports[`EuiCheckbox props label is rendered 1`] = `
<div
  class="euiCheckbox emotion-euiCheckbox"
>
  <input
    class="euiCheckbox__input emotion-euiCheckbox__input"
    id="id"
    type="checkbox"
  />
  <label
    class="euiCheckbox__label emotion-euiCheckbox__label"
    for="id"
  >
    <span>
      Label
    </span>
  </label>
</div>
`;

exports[`EuiCheckbox props labelProps is rendered 1`] = `
<div
  class="euiCheckbox emotion-euiCheckbox"
>
  <input
    class="euiCheckbox__input emotion-euiCheckbox__input"
    id="id"
    type="checkbox"
  />
  <label
    aria-label="aria-label"
    class="euiCheckbox__label testClass1 testClass2 emotion-euiCheckbox__label-euiTestCss"
    data-test-subj="test subject string"
    for="id"
  >
    Label
  </label>
</div>
`;
